--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ select = [ "PLE", "PLR", "PLW", "E", "W", "F", "I", "Q", "B",]
 [tool.poetry.dependencies]
 python = "^3.9"
 poetry = "^1.4.0"
+playwright = "^1.32.1"
 
 [tool.ruff.flake8-quotes]
 inline-quotes = "single"
