--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ select = [ "PLE", "PLR", "PLW", "E", "W", "F", "I", "Q", "B",]
 python = "^3.9"
 poetry = "^1.4.0"
 playwright = "^1.32.1"
+beautifulsoup4 = "^4.12.2"
 
 [tool.ruff.flake8-quotes]
 inline-quotes = "single"
