--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,9 @@ python = "^3.9"
 poetry = "^1.4.0"
 playwright = "^1.32.1"
 beautifulsoup4 = "^4.12.2"
-rich = "^13.3.4"
 httpx = "^0.24.0"
+typer = "^0.7.0"
+rich = "^13.3.4"
 
 [tool.ruff.flake8-quotes]
 inline-quotes = "single"
