--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ beautifulsoup4 = "^4.12.2"
 httpx = "^0.24.0"
 typer = "^0.7.0"
 rich = "^13.3.4"
+yt-dlp = "^2023.3.4"
 
 [tool.ruff.flake8-quotes]
 inline-quotes = "single"
