--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ readme = "README.md"
 [[tool.poetry.packages]]
 include = "python_poetry_template"
 
+[tool.poetry.scripts]
+twtvt = "twtvt:main"
+
 [tool.pyright]
 typeCheckingMode = "strict"
 pythonPlatform = "All"
